[package]
name = "charta-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) integration for Charta"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = "2.9"

[dev-dependencies]
rstest = "0.18"
